# nitrosearch

./: .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LARGE_SCALE_SUMMARY.md  README.md  install-windows.bat  install.sh
.github/workflows/: release.yml
crates/nitro-api/: Cargo.toml
crates/nitro-api/src/: engine.rs  main.rs  metrics.rs  persistence.rs  search_executor.rs  storage_engine.rs
crates/nitro-core/: Cargo.toml
crates/nitro-core/src/: document.rs  error.rs  highlight.rs  lib.rs  schema.rs  shard.rs
crates/nitro-index/: Cargo.toml
crates/nitro-index/src/: inverted_index.rs  lib.rs  tokenizer.rs
crates/nitro-query/: Cargo.toml
crates/nitro-query/src/: filter.rs  lib.rs  parser.rs  query.rs
crates/nitro-ranking/: Cargo.toml
crates/nitro-ranking/src/: bm25.rs  lib.rs
crates/nitro-storage/: Cargo.toml
crates/nitro-storage/src/: bloom.rs  compression.rs  lib.rs  mmap.rs  segment.rs  segment_manager.rs  wal.rs
