[workspace]
resolver = "2"
members = [
  "crates/nitro-core",
  "crates/nitro-storage",
  "crates/nitro-index",
  "crates/nitro-query",
  "crates/nitro-ranking",
  "crates/nitro-api",
]

[workspace.dependencies]
tokio = { version = "1.43", features = ["full"] }
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
zstd = "0.13"
memmap2 = "0.9"
moka = { version = "0.12", features = ["future"] }
roaring = "0.10"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
thiserror = "2.0"
anyhow = "1.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
panic = "abort"