[package]
name = "nitro-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
nitro-core = { path = "../nitro-core" }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
zstd = { workspace = true }
memmap2 = { workspace = true }
roaring = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
crc32fast = "1.4"
rayon = "1.8"
crossbeam = "0.8"
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3"
